<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/bg_custom_dialog_add_word"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/etEnglish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_et_english"
        android:ems="10"
        android:hint="@string/ingilizce"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <EditText
        android:id="@+id/etTurkish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_et_turkish"
        android:ems="10"
        android:hint="@string/turkce"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Spinner
        android:id="@+id/spCategories"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:entries="@array/Categories"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_clear"
            android:text="@string/temizle"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_add"
            android:text="@string/ekle"
            android:textColor="#fff" />
    </LinearLayout>


</LinearLayout>