<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9b5de5"
    tools:context=".view.MainActivity">

    <RelativeLayout

        android:id="@+id/rlvtop"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:src="@drawable/character1"/>

        <TextView
            android:fontFamily="@font/opensans_bold"
            android:textColor="#fafafa"
            android:id="@+id/tvMain"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello,Semih"/>
        <TextView
            android:fontFamily="@font/opensans_regular"
            android:textColor="#fafafa"
            android:id="@+id/tvChild"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMain"
            android:text="Pick a category to get started."/>


        <TextView
            android:textColor="#fafafa"
            android:fontFamily="@font/opensans_regular"
            android:id="@+id/txtNext"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/ilerleme"
            android:textSize="15sp"/>


        <ProgressBar
            android:id="@+id/progressLevel"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:progress="75"
            android:progressDrawable="@drawable/custom_progress" />

        <TextView
            android:fontFamily="@font/opensans_regular"
            android:id="@+id/txtLevel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="9dp"
            android:gravity="center"
            android:textColor="#0c0c0c"
            android:text="% 100"
            android:textSize="15sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlvbottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlvtop"
        android:background="@drawable/bg_rlvbottom"
        android:padding="20dp">

        <RelativeLayout
            android:id="@+id/rlvLevel"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg_rlvlevel"
            android:gravity="center">

            <LinearLayout
                android:gravity="center"
                android:id="@+id/lnrTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/flag_united_kingdom"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/opensans_regular"
                    android:id="@+id/txtGeneral"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="#2196F3"
                    android:text="@string/ingilizce_top"
                    android:textSize="18sp"/>

            </LinearLayout>






            <RelativeLayout
                android:id="@+id/rlvLevelMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnrTop"
                android:gravity="center">


                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    app:arc_bottom_text_size="10sp"
                    app:arc_finished_color="#FD5C72"
                    app:arc_max="5000"
                    app:arc_stroke_width="7dp"
                    app:arc_suffix_text=" "
                    app:arc_suffix_text_padding="0dp"
                    app:arc_text_color="#0c0c0c"
                    app:arc_text_size="25sp"
                    app:arc_unfinished_color="#EFC0C6"
                    custom:arc_progress="2555" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/arc_progress1"
                    app:arc_bottom_text_size="10sp"
                    app:arc_finished_color="#FD5C72"
                    app:arc_max="5000"
                    app:arc_stroke_width="7dp"
                    app:arc_suffix_text=" "
                    app:arc_suffix_text_padding="5dp"
                    app:arc_text_color="#0c0c0c"
                    app:arc_text_size="25sp"
                    app:arc_unfinished_color="#EFC0C6"
                    custom:arc_progress="55" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/arc_progress2"
                    app:arc_bottom_text_size="10sp"
                    app:arc_finished_color="#FD5C72"
                    app:arc_stroke_width="7dp"
                    app:arc_suffix_text_padding="5dp"
                    app:arc_text_color="#0c0c0c"
                    app:arc_max="5000"
                    app:arc_suffix_text=" "
                    app:arc_text_size="25sp"
                    app:arc_unfinished_color="#EFC0C6"
                    custom:arc_progress="2500" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlvLevelMain"
                android:gravity="center">

                <TextView
                    android:fontFamily="@font/opensans_regular"
                    android:id="@+id/txt1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/kelimelerim"
                    android:textSize="12sp"/>

                <TextView
                    android:fontFamily="@font/opensans_regular"
                    android:id="@+id/txt2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/txt1"
                    android:gravity="center"
                    android:text="@string/ogrendiklerim"
                    android:textSize="12sp"/>



                <TextView
                    android:fontFamily="@font/opensans_regular"
                    android:id="@+id/txt3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/txt2"
                    android:gravity="center"
                    android:text="@string/kalan"
                    android:textSize="12sp"/>


            </RelativeLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlvLevel"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/opensans_regular"
                android:id="@+id/txtCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kategoriler"
                android:textSize="15sp"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <LinearLayout
                    android:clickable="true"
                    android:onClick="onAddWordClick"
                    android:layout_margin="5dp"
                    android:id="@+id/lnr1"
                    android:background="@drawable/bg_btn_add_word"
                    android:layout_width="130dp"
                    android:gravity="center"
                    android:layout_height="130dp"
                    android:orientation="vertical">

                    <ImageView
                        android:padding="2dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/main_menu_add"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Word"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="#fafafa"
                        android:fontFamily="@font/opensans_bold"/>




                </LinearLayout>
                <LinearLayout
                    android:clickable="true"
                    android:onClick="onAllWordsClick"
                    android:layout_margin="5dp"
                    android:id="@+id/lnr2"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_my_word"
                    android:layout_width="130dp"
                    android:layout_toRightOf="@id/lnr1"
                    android:layout_height="130dp"
                    android:orientation="vertical">

                    <ImageView
                        android:padding="2dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/main_menu_word"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="All Words"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="#fafafa"
                        android:fontFamily="@font/opensans_bold"/>

                </LinearLayout>
                <LinearLayout

                    android:layout_margin="5dp"
                    android:id="@+id/lnr3"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_my_learned"
                    android:layout_below="@id/lnr2"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical">

                    <ImageView
                        android:padding="2dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/main_menu_learned"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="What I Learned"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="#fafafa"
                        android:fontFamily="@font/opensans_bold"/>

                </LinearLayout>
                <LinearLayout
                    android:onClick="onQuizClick"
                    android:layout_margin="5dp"
                    android:id="@+id/lnr4"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_exam"
                    android:layout_width="130dp"
                    android:layout_below="@id/lnr2"
                    android:layout_toRightOf="@id/lnr3"
                    android:layout_height="130dp"
                    android:orientation="vertical">

                    <ImageView
                        android:padding="2dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/main_menu_exam"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Exam"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="#fafafa"
                        android:fontFamily="@font/opensans_bold"/>

                </LinearLayout>






            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>